[gd_scene load_steps=7 format=3 uid="uid://b40vlc70hk8cj"]

[ext_resource type="Script" uid="uid://txderep7yms4" path="res://game.gd" id="1_80nbo"]
[ext_resource type="Texture2D" uid="uid://bo3r5jkc0isw6" path="res://image.png" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://dgldwxqvjulbc" path="res://Bills/Bill.tscn" id="3_feb5d"]
[ext_resource type="Resource" uid="uid://4kqdetgnt7yh" path="res://Pricks/FirstRich.tres" id="4_j5wjh"]
[ext_resource type="Script" uid="uid://dmb042m5gpouv" path="res://Pricks/RichPrick.gd" id="6_mfdv2"]
[ext_resource type="Texture2D" uid="uid://82ajvp6eaby2" path="res://full_progress_bar.png" id="9_hve3p"]

[node name="Game" type="Node"]
script = ExtResource("1_80nbo")
AllPricks = Array[ExtResource("6_mfdv2")]([ExtResource("4_j5wjh")])
BillControllScene = ExtResource("3_feb5d")

[node name="TimerGame" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 642.0
offset_bottom = 359.0

[node name="Image" type="Sprite2D" parent="Control"]
texture = ExtResource("2_e2o6t")
centered = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.11100001
anchor_bottom = 0.11100001
offset_left = 472.0
offset_top = 304.0
offset_right = 542.738
offset_bottom = 283.151
value = 25.0
texture_progress = ExtResource("9_hve3p")

[node name="TimerLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 290.0
offset_right = 146.0
offset_bottom = 332.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Timer: "

[node name="Budget" type="Label" parent="Control"]
layout_mode = 0
offset_left = 26.0
offset_top = 234.0
offset_right = 100.0
offset_bottom = 260.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Budget: "

[node name="SolvedProblemsText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 467.0
offset_top = 205.0
offset_right = 535.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "SOLVED"

[node name="SolvedProblems" type="Label" parent="Control"]
layout_mode = 0
offset_left = 551.0
offset_top = 206.0
offset_right = 619.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="ProblemText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 497.0
offset_top = 261.0
offset_right = 620.0
offset_bottom = 293.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "kill the rich"
autowrap_mode = 3

[node name="PrickName" type="Label" parent="Control"]
layout_mode = 0
offset_left = 47.0
offset_top = 11.0
offset_right = 131.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Rich Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]
